docs: fix some wcag-aa color contrast issues (#9468)

--- a/docs/.vitepress/theme/styles.css
+++ b/docs/.vitepress/theme/styles.css
@@ -5,6 +5,12 @@
 /* Vitest */
 :root[data-variant="vitest"] {
   --color-brand: #008039;
+  /* TODO: home page wcag-aa color contrast (remove this once fixed at void0 theme):
+   * - why vitest section and texts
+   * - vitest, resources, versions and social
+   * - footer
+   */
+  --color-grey: #867e8e;
 }
 
 :root.dark:not([data-theme])[data-variant="vitest"],
@@ -12,8 +18,11 @@
   --color-brand: var(--color-zest);
 }
 
+:root[data-variant="vitest"]:not(.dark):not([data-theme="light"]),
 :root[data-theme="light"][data-variant="vitest"] {
   --color-brand: #008039;
+  /* TODO: code block (remove this once fixed at void0 theme) */
+  --vp-code-color: #007d38;
 }
 
 
